<resources>
    <string name="app_name">ReproductorMusica_RecyclerView</string>

    <!-- Audio List Fragment -->
    <string name="audio_list_title">Lista de Canciones</string>

    <!-- Audio Item -->
    <string name="audio_name_placeholder">Titulo</string>
    <string name="audio_duration_placeholder">Duración</string>

    <!-- Music Player Fragment -->
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="back">Regresar</string>
</resources>
